--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+	android:background="@color/colorPrimary"
     tools:context="com.binaryfeast.hiai.hiai.MainActivity">
 
     <Button
         android:id="@+id/snapButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="3dp"
         android:text="Snap"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,10 +20,9 @@
     <TextView
         android:id="@+id/faceTextView"
         android:layout_width="201dp"
-        android:layout_height="44dp"
+        android:layout_height="42dp"
         android:layout_marginStart="6dp"
         android:layout_marginTop="3dp"
-        android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/selectButton"
         app:layout_constraintTop_toTopOf="parent" />
@@ -33,7 +31,7 @@
         android:id="@+id/selectButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Select"
+        android:text="Select Image"
         android:visibility="invisible"
         app:layout_constraintStart_toEndOf="@+id/snapButton"
         app:layout_constraintTop_toTopOf="parent" />
@@ -43,6 +41,7 @@
         android:layout_width="387dp"
         android:layout_height="466dp"
         android:layout_marginStart="1dp"
+        android:background="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
